feat: implement CRUD and search endpoints for books